# agentops-crewai-docs-walkthrough

./: .gitignore  README.md  requirements.txt
READMEs/: 1.md  2.md  3.md  4.md
examples/: 1.py  4.py
examples/2/latest_ai_development/: pyproject.toml  report.md
examples/2/latest_ai_development/src/latest_ai_development/: main.py
examples/3/with_da_tools/: README.md  pyproject.toml  report.md
examples/3/with_da_tools/db/: chroma.sqlite3
examples/3/with_da_tools/src/with_da_tools/: crew.py  main.py
examples/3/with_da_tools/src/with_da_tools/config/: agents.yaml  tasks.yaml
